--- a/public/post/2019-11-04-making-python-apps.Rmd
+++ b/public/post/2019-11-04-making-python-apps.Rmd
@@ -26,7 +26,7 @@ For this reason I had been working largely in R for the past while, despite my p
 
 <div class="container">
 <!-- Nav tabs -->
-<ul class="nav nav-tabs nav-justified" role="tablist">
+<ul class="nav nav-pills nav-justified" role="tablist">
 
 <li class="nav-item active">
 <a class="nav-link active" data-toggle="tab" href="#streamlit"><font size="+2"><b>Streamlit</b></font></a>
@@ -108,7 +108,7 @@ For example, I have made two Streamlit apps to host my microlearning series on s
 
 <div class="container">
 <!-- Nav tabs -->
-<ul class="nav nav-tabs nav-justified" role="tablist">
+<ul class="nav nav-pills nav-justified" role="tablist">
 
 <li class="nav-item active">
 <a class="nav-link active" data-toggle="tab" href="#survival"><font size="+1"><b>Survival analysis</b></font></a>
