--- a/content/post/2019-11-06-useful-html-snippets-to-jazz-up-your-site.Rmd
+++ b/content/post/2019-11-06-useful-html-snippets-to-jazz-up-your-site.Rmd
@@ -1,5 +1,5 @@
 ---
-title: HTML snippets to jazz up your site
+title: HTML and CSS snippets to jazz up your site
 author: ''
 date: '2019-11-06'
 categories:
@@ -42,9 +42,7 @@ image: images/post/html_snippets.png
 
 ## Tabs
 
-Tabs are a great way to save on space:
-
-For example:
+Tabs are a great way to display information that you might want to compare side-by-side. The horizontal layout also helps to save on space. I always opt for the Bootstrap tabsets, as they are very easy and consistent to implement:
 
 <br>
 
@@ -186,6 +184,36 @@ If there are headings that you do not want to be included in the outline, you ca
 
 ## Style code blocks
 
+I love the ability to use both Python and R code in a single Rmarkdown post on Blogdown sites. With that, it would be nice to be able to easily visually distinguish Python and R code blocks. Here are the CSS stylings that I use in my sites:
+
+```CSS
+code{                /* Base styling for all code blocks */
+  padding: 3px 5px;
+  background: #ffffff; 
+  border: 1px solid $border-color;
+  border-radius: 3px;
+  color: $text-color-dark;
+}
+
+.python {              /* This can be any other language, ex. R, HTML, CSS */
+  background: #ffffff; 
+  border-color:  #F6B156;
+  border-style: dotted;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word;
+}
+```
+
+ 
+<br>
 
 
 
