--- a/content/post/2019-11-07-graphing-in-python-a-walkthrough.Rmd
+++ b/content/post/2019-11-07-graphing-in-python-a-walkthrough.Rmd
@@ -221,6 +221,10 @@ print(o)
 ```
 
 
+<iframe src="https://raindrop.io/collection/8766091" style="border:0px #ffffff none;" name="myiFrame"  scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="100%" allowfullscreen></iframe>
+
+
+
 
 
 
