Add more content to Python graphing packages post

--- a/content/post/2019-11-08-ui-and-ux-resources.Rmd
+++ b/content/post/2019-11-08-ui-and-ux-resources.Rmd
@@ -54,6 +54,15 @@ Pepper these through out to keep things interesting:
 
 <iframe src="https://raindrop.io/collection/8775198" style="border:0px #ffffff none;" name="myiFrame"  scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="700px" width="100%" allowfullscreen></iframe>
 
+<br>
+
+## Colour schemes
+
+For those of us who know what looks good but can't come up with it on our own, colour palette generators and inspirations are essential:
+
+<iframe src="https://raindrop.io/collection/8973938" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="700px" width="100%" allowfullscreen></iframe>
+
+
 
 
 
